force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/Portal_Directory_Search_Display_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Portal Directory Search Display Setting</label>
    <pluralLabel>Portal Directory Search Display Settings</pluralLabel>
</CustomObject>