force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>