force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Filter_Clause__c</fullName>
    <label>Filter Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>