force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Portal_Directory_Search_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Portal_Directory_Search_Criteria__c</fullName>
    <label>Portal Directory Search Criteria</label>
    <referenceTo>Portal_Directory_Search_Criteria__mdt</referenceTo>
    <relationshipLabel>Portal Directory Search Display Settings</relationshipLabel>
    <relationshipName>Portal_Directory_Search_Display_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>