force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Pulls_From_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Pulls_From_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulls From Picklist</label>
    <type>Checkbox</type>
</CustomField>