force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Static_Values__c.field-meta.xml
<CustomField>
    <fullName>Static_Values__c</fullName>
    <label>Static Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>