force-app/main/default/objects/Portal_Directory_Search_Display_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static List</fullName>
                <default>true</default>
                <label>Static List</label>
            </value>
            <value>
                <fullName>Picklist Field</fullName>
            </value>
            <value>
                <fullName>Real Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>